Fixing up the spacing in tables.

--- a/source/_sass/_base.scss
+++ b/source/_sass/_base.scss
@@ -306,8 +306,7 @@ table td {
   font-size: 94%;
   font-family: $header-font;
   border-bottom: 1px solid rgba(0, 0, 0, 0.04);
-  padding: 16px;
-  padding-bottom: 15px;
+  padding: 5px;
 }
 table th:first-child,
 table td:first-child {
